--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,16 +4,38 @@
     <title>스프링부트 웹서비스</title>
     <meta http-equiv="Content-Type" content="text/html;" charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!--  부트스트랩 css 추가  -->
     <link th:href="@{/css/lib/bootstrap.min.css}" rel="stylesheet" />
 </head>
 <body>
 
     <h1>스프링부트로 시작하는 웹 서비스</h1>
-
     <div class="col-md-12">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#savePostModal">글 등록</button>
+        <br/>
+        <br/>
+        <!--    목록 출력 영역    -->
+        <table class="table table-horizontal table-bordered">
+            <thead class="thread-strong">
+                <tr>
+                    <th>게시글 번호</th>
+                    <th>제목</th>
+                    <th>작성자</th>
+                    <th>최종 수정일</th>
+                </tr>
+            </thead>
+            <tbody id="tbody">
+                <tr th:each="post : ${posts}" >
+                        <th th:text="${post.id}"></th>
+                        <th th:text="${post.title}"></th>
+                        <th th:text="${post.author}"></th>
+                        <th th:text="${post.modifiedDate}"></th>
+                </tr>
+            </tbody>
+        </table>
     </div>
-
+    <!-- Modal 영역 -->
     <div class="modal fade" id="savePostModal" tabindex="-1" role="dialog" aria-labelledby="savePostLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -47,8 +69,10 @@
         </div>
     </div>
 
-
+    <!--  부트스트랩 js, jQuery 추가  -->
     <script th:src="@{/js/lib/jquery.min.js}"></script>
     <script th:src="@{/js/lib/bootstrap.min.js}"></script>
+
+    <script th:src="@{/js/app/main.js}"></script>
 </body>
 </html>
